_assets/css/pages/_project.scss
// banner
.project-banner {
    .usa-hero {
      @include u-margin-bottom(4);
      //@include u-text("white");
      background-image: url(asset_path("projects/Project_Banner.png"));
      background-position: 90% 56%;
      //background-color: color("base-lightest");
      position: relative;
      overflow: hidden;
      min-height: 600px;

      //tablet
      @include at-media-max("tablet") {
        min-height: 760px;
      }

      //desktops
      @include at-media("desktop") {
        min-height: 670px;
      }
      @include at-media("desktop-lg") {
        min-height: 600px;
        max-height: 100%;
      }
  
      // < tablet
      @include at-media-max("mobile-lg") {
        min-height: unset;
        @include u-padding-y(0);
        background-position: 70% 50%;
      }
  
      // callout container
      .usa-hero__callout {
        color: inherit;
        //background-color: rgba(28, 29, 31, 0.55); // base-darkest #1c1d1f
        width: 100%;
        position: relative;
  
        // < tablet
        @include at-media-max("mobile-lg") {
          @include u-padding-x(2);
          @include u-padding-top(15);
          position: relative;
          min-height: 500px;
        }
  
        .grid-container {
          @include u-padding-x(0);
          
        }
  
        .usa-button {
          float: left;
          @include u-margin-top(3);
  
          // < tablet
          @include at-media("tablet") {
            float: right;
          }
        }
  
        // subtext
        h2 {
          @include u-margin-top(3);
          @include u-margin-bottom(0);
          color: inherit;
        }

        .impact-skills{
          //@include u-padding-top(1);
            @include at-media("desktop-lg") {
              @include u-padding-top(10);
            }
        }
        .project-specialty{
            color: #ffffff;
            @include u-margin-bottom(0.5);
            //@include u-padding-top(10);
            ul {
              @include u-padding(0);
              list-style: none;
              display: flex;
              li {
                @include u-margin-bottom(2.0);
                @include u-margin-right(0.5);
                span {
                  @include u-font('sans', 1);
                  @include u-padding-top(1);
                  @include u-padding-bottom(1);
                  @include u-padding-left(2);
                  @include u-padding-right(2);
                  @include u-bg('red-cool-10v');
                  border-radius: 40px;
                  
                  &.Equity {
                    background-color: #58B4FF;
                    color: #000000;
                  }
                  &.Health {
                    background-color: #FACE00;
                    color: #000000; 
                  }
                  &.Cybersecurity {
                    background-color: #000000;
                  }
                  &.Public_experience {
                    background-color: #9D1831;
                  }
                  &.Immigration {
                    background-color: #1B2B85;
                  }
                  &.Capacity_Building {
                    background-color: #C7C7C7;
                    color: #000000;
                  }
                  &.Open_science {
                    background-color: #0076D6;
                    color: #000000;
                  }
                
                }
              }
            }
        }
      }
    }
  }
  @mixin left-border {
    border-left: 1px solid #1a4480;
  }

  .project-team {
    float: left;
    text-align: left;
    display: flex;
    align-items: center;
    @include at-media("desktop") {
      text-align: left;
      display: flex;
      align-items: center;
      float: right;
    }
  
    span, img {
      vertical-align: middle;
    }
  
    > div {
      @include at-media("tablet") {
        @include left-border;
        // flex-shrink: 0;
      }
    }
  
    > div.first {
      @include at-media("tablet") {
        border-left: none;
        padding-left: 0;
      }
    }
  
    .project-team__members {
      border-left: none;
    }
    .project-team__member {
      // display: flex;
      display: inline-block;
      margin: 1rem 0;
      @include at-media("tablet") {
        // padding-left: 1rem;
        padding-right: 1rem;
      }
    }
  
    .project-team__member-text {
      padding-left: 1rem;
    }
  
  }
  .project-banner-links{
    float: left;
    @include at-media("tablet") {
     // @include u-padding-top(7);
      @include u-padding-right(10);
      float: left;
    }
    @include at-media("desktop") {
      @include u-padding-top(6);
      float: right;
    }
    @include at-media("desktop-lg") {
      @include u-padding-top(15);
      @include u-padding-right(10);
      float: right;
    }
  }

  .project-nav{
    .usa-sidenav {
      counter-reset: usa-numbered-list;

      .usa-sidenav__item {
          border-top: none;
          a {
              &:hover{
                @include u-text("primary-light");
              }
            }
      }

      .usa-sidenav__item::before {
          display: flex;
          flex-direction: row;

          position: absolute;
          left: -1.5rem;
          height: 1.5rem;
          width: 1.5rem;

          margin-top: 0.45rem;
          align-items: center;
          justify-content: center;

          font-family: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
          font-size: 0.9rem;
          font-weight: bold;
          color: color("base-dark");

          border: 0.15rem solid color("base-dark");
          border-radius: 50%;
          background-color: white;

          
      }
  }
  }
.usa-summary-box{
  background-color: #ffffff;
  border-color: #ffffff;
}

@media screen and (min-width:480px) and (max-width:490px) {
  .project-banner {
    .usa-hero {
      min-height: 730px;
    }
  }
}
@media screen and (min-width:491px) and (max-width:557px){
  .project-banner {
    .usa-hero {
      min-height: 800px;
    }
  }
}
@media screen and (min-width:558) and (max-width:1000px){
  .project-banner {
    .usa-hero {
      min-height: 750px;
    }
  }
}
 //min-height between 650 and 686 needs to be 750px
//  @media only screen and (min-width: 650px) and (max-width: 700px) {
//   .project-banner {
//     .usa-hero {
//     min-height: 750px;
//   }
// }
// }

